Add skeleton for the booking section

--- a/src/index.html
+++ b/src/index.html
@@ -401,6 +401,84 @@
         />
       </section>
     </main>
+    <main class="booking-page">
+      <section class="section booking">
+        <img
+          src="./assets/logo.svg"
+          alt="logo"
+          class="logo booking__logo"
+          height="30"
+        />
+        <div class="crop booking__crop">
+          <img
+            src="./assets/booking/hero-bg-desktop@2x.jpg"
+            alt="Vegetable dish"
+            class="booking__image"
+            height="200"
+          />
+        </div>
+        <div class="text-group text-group_size_hero booking__text-group">
+          <h2 class="text text_white text_heading_xl text-group__heading">
+            Reservations
+          </h2>
+          <p class="text text_white text_body_1 text-group__body">
+            We can't wait to host you. If you have any special requirements
+            please feel free to call on the phone number below. We'll be happy
+            to accommodate you.
+          </p>
+        </div>
+        <form class="form">
+          <input class="form__input" type="text" placeholder="Name" />
+          <input class="form__input" type="email" placeholder="Email" />
+          <div class="form__group">
+            <label class="form__label">Pick a date</label>
+            <div class="form__tuple">
+              <input class="form__input" type="number" placeholder="MM" />
+              <input class="form__input" type="number" placeholder="DD" />
+              <input class="form__input" type="number" placeholder="YYYY" />
+            </div>
+          </div>
+          <div class="form__group">
+            <label class="form__label">Pick a time</label>
+            <div class="form__tuple">
+              <input class="form__input" type="number" placeholder="09" />
+              <input class="form__input" type="number" placeholder="00" />
+              <select class="form__input">
+                <option value="AM" selected>AM</option>
+                <option value="PM">PM</option>
+              </select>
+            </div>
+            <div class="form__input form__counter">
+              <img
+                class="form__button-subtract"
+                src="assets/icons/icon-minus.svg"
+                alt="minus icon"
+              />
+              <span>2 people</span>
+              <img
+                class="form__button-add"
+                src="assets/icons/icon-plus.svg"
+                alt="plus icon"
+              />
+            </div>
+          </div>
+        </form>
+      </section>
+      <section class="section pattern-section">
+        <img
+          src="./assets/patterns/pattern-curve-bottom-right.svg"
+          alt="pattern"
+          class="pattern-section__bottom-right-pattern"
+          height="200"
+        />
+        <img
+          src="./assets/patterns/pattern-lines.svg"
+          alt="pattern"
+          class="pattern-section__lines-pattern"
+          width="125"
+        />
+      </section>
+    </main>
     <footer class="section section_dark footer">
       <img src="./assets/logo.svg" alt="logo" class="logo" height="30" />
       <div class="footer__grid">
