Add more form styling, create a working dropdown

--- a/src/index.html
+++ b/src/index.html
@@ -504,6 +504,7 @@
                   src="assets/icons/icon-arrow.svg"
                   alt="dropdown arrow"
                 />
+                <span class="form__dropdown-text">AM</span>
                 <ul class="form__dropdown-list" data-inactive>
                   <li class="form__dropdown-item" data-selected>AM</li>
                   <li class="form__dropdown-item">PM</li>
