Add an invert button style

--- a/src/index.html
+++ b/src/index.html
@@ -229,7 +229,7 @@
             </div>
             <input
               type="button"
-              class="button text_heading_s slides__button"
+              class="button button_invert text_heading_s slides__button"
               value="BOOK A TABLE"
               data-action="book-table"
             />
@@ -290,7 +290,7 @@
             </div>
             <input
               type="button"
-              class="button text_heading_s slides__button"
+              class="button button_invert text_heading_s slides__button"
               value="BOOK A TABLE"
               data-action="book-table"
             />
@@ -351,7 +351,7 @@
             </div>
             <input
               type="button"
-              class="button text_heading_s slides__button"
+              class="button button_invert text_heading_s slides__button"
               value="BOOK A TABLE"
               data-action="book-table"
             />
@@ -528,7 +528,7 @@
           <input
             type="submit"
             value="MAKE RESERVATION"
-            class="button text_heading_s cta__button"
+            class="button button_invert text_heading_s cta__button"
             data-action="make-reservation"
           />
         </form>
