Disable form autocomplete

--- a/src/index.html
+++ b/src/index.html
@@ -434,6 +434,7 @@
               type="text"
               placeholder="Name"
               name="name"
+              autocomplete="off"
             />
             <label class="text text_form_3 form__required form__required_offset"
               >This field is required</label
@@ -445,6 +446,7 @@
               type="text"
               placeholder="Email"
               name="email"
+              autocomplete="off"
             />
             <label class="text text_form_3 form__required form__required_offset"
               >This field is required</label
@@ -463,18 +465,21 @@
                 type="text"
                 placeholder="MM"
                 name="month"
+                autocomplete="off"
               />
               <input
                 class="text text_form_1 form__input"
                 type="text"
                 placeholder="DD"
                 name="day"
+                autocomplete="off"
               />
               <input
                 class="text text_form_1 form__input"
                 type="text"
                 placeholder="YYYY"
                 name="year"
+                autocomplete="off"
               />
             </div>
           </div>
@@ -491,12 +496,14 @@
                 type="text"
                 placeholder="09"
                 name="hour"
+                autocomplete="off"
               />
               <input
                 class="text text_form_1 form__input"
                 type="text"
                 placeholder="00"
                 name="minute"
+                autocomplete="off"
               />
               <div class="text text_form_1 form__input form__dropdown">
                 <img
