Style the tablet highlights section

--- a/src/index.html
+++ b/src/index.html
@@ -134,6 +134,7 @@
               alt="Seared salmon fillet"
               class="highlights__image"
               height="200"
+              salmon
             />
             <div class="text-group text-group_size_small">
               <h3
@@ -155,6 +156,7 @@
               alt="Rosemary filet mignon"
               class="highlights__image"
               height="200"
+              beef
             />
             <div class="text-group text-group_size_small">
               <h3
@@ -176,6 +178,7 @@
               alt="Fruit chocolate mousse"
               class="highlights__image"
               height="200"
+              chocolate
             />
             <div class="text-group text-group_size_small">
               <h3
