Style the tablet slides section

--- a/src/index.html
+++ b/src/index.html
@@ -218,6 +218,7 @@
             alt="Family eating dinner at a large Table"
             class="slides__image"
             height="300"
+            family
           />
           <div class="slides__container">
             <div class="text-group text-group_size_regular slides__text-group">
@@ -279,6 +280,7 @@
             alt="Family eating dinner at a large Table"
             class="slides__image"
             height="300"
+            special
           />
           <div class="slides__container">
             <div class="text-group text-group_size_regular slides__text-group">
@@ -340,6 +342,7 @@
             alt="Family eating dinner at a large Table"
             class="slides__image"
             height="300"
+            social
           />
           <div class="slides__container">
             <div class="text-group text-group_size_regular slides__text-group">
