Create a design system and use it

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
         </div>
         <input
           type="button"
-          class="button button_style_white text_heading_s hero__button"
+          class="button button_style_white text text_heading_s hero__button"
           value="BOOK A TABLE"
           data-action="book-table"
         />
@@ -233,7 +233,7 @@
             </div>
             <input
               type="button"
-              class="button button_style_invert text_heading_s slides__button"
+              class="button button_style_invert text text_heading_s slides__button"
               value="BOOK A TABLE"
               data-action="book-table"
             />
@@ -295,7 +295,7 @@
             </div>
             <input
               type="button"
-              class="button button_style_invert text_heading_s slides__button"
+              class="button button_style_invert text text_heading_s slides__button"
               value="BOOK A TABLE"
               data-action="book-table"
             />
@@ -357,7 +357,7 @@
             </div>
             <input
               type="button"
-              class="button button_style_invert text_heading_s slides__button"
+              class="button button_style_invert text text_heading_s slides__button"
               value="BOOK A TABLE"
               data-action="book-table"
             />
@@ -399,7 +399,7 @@
         </h2>
         <input
           type="button"
-          class="button button_style_white text_heading_s cta__button"
+          class="button button_style_white text text_heading_s cta__button"
           value="BOOK A TABLE"
           data-action="book-table"
         />
@@ -537,7 +537,7 @@
           <input
             type="submit"
             value="MAKE RESERVATION"
-            class="button button_style_invert text_heading_s cta__button"
+            class="button button_style_invert text text_heading_s cta__button"
             data-action="make-reservation"
           />
         </form>
