Style the mobile layout booking section

--- a/src/index.html
+++ b/src/index.html
@@ -428,6 +428,12 @@
             please feel free to call on the phone number below. We'll be happy
             to accommodate you.
           </p>
+          <input
+            type="button"
+            value="MAKE RESERVATION"
+            class="button button_style_white text text_heading_s booking__button"
+            data-action="make-reservation"
+          />
         </div>
         <form class="form">
           <div class="form__required-label-group">
